--- a/contact.html
+++ b/contact.html
@@ -135,9 +135,9 @@
                     <li><a href="#">For Authors</a>
                         <ul class="nav-dropdown">
                             <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
-                            <li><a href="Data-Science-and-System-Research.html">Data Science and System Research</a>
+                            <li><a href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a>
                             </li>
-                            <li><a href="Data-Science-and-Applications-Track.html">Data Science and Applications
+                            <li><a href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications
                                     Track</a></li>
                         </ul>
                     </li>
@@ -166,7 +166,7 @@
                         </div>
                         <div class="col-md-6">
                             <p class="banner-nav">
-                                <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
+                                <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                                 <span class="banner-box">
                                     <a href="index.html">Home</a>
                                     <a href="contact.html">Contact</a>
