--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ICDDS 2022</title>
+    <title>ICDDS </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -135,9 +135,9 @@
                     <li><a href="#">For Authors</a>
                         <ul class="nav-dropdown">
                             <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
-                            <li><a href="Data-Science-and-System-Research.html">Data Science and System Research</a>
+                            <li><a href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a>
                             </li>
-                            <li><a href="Data-Science-and-Applications-Track.html">Data Science and Applications
+                            <li><a href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications
                                     Track</a></li>
                         </ul>
                     </li>
@@ -230,8 +230,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="banner1-header1">
-                                <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="200px"><br><br>
-                                ICDDS 2022
+                                <img src="img/IEEE-CS-BangaloreChapterOrange.png" background="white" width="200px"><br><br>
+                                ICDDS
                             </h1>
                             <h2 style="text-align: center; color: #ddd;">DECEMBER 2-3, 2022</h2>
                             <h3 style="text-align: center; color: #ddd;">Hybrid Conference | Bengaluru, India</h3>
@@ -266,7 +266,7 @@
             <div class="row">
                 <div class="col-md-12 about-col-1">
                     <div class="about-title">
-                        <h1>International Conference on Data, Decision and Systems <br>2022</h1>
+                        <h1>International Conference on Data, Decision and Systems</h1>
                         <!-- <a href="#">Buy Tickets</a> -->
                     </div>
                 </div>
@@ -288,18 +288,10 @@
                                     <!-- <img class="img-fluid" src="https://via.placeholder.com/600x300" /> -->
                                 </div>
                                 <p>
-                                    Rapid advances and growth in connected world across different application domains
-                                    are fast pacing the data volumes generated from range of devices. Such high growth
-                                    is further endorsed by digital transformation, adoption of advanced Internet of
-                                    Things (IoT) solutions, cyber physical systems and Smart things. Data being the
-                                    centre of innovative systems, its overall realization in solution building depends
-                                    on several aspects. For example, quality of data, data management, computation,
-                                    knowledge discovery and decision.
+                                    Rapid advances and growth in connected world across different application domains are fast pacing the data volumes generated from range of devices. Such high growth is further endorsed by digital transformation, adoption of advanced Internet of Things (IoT) solutions, cyber physical systems, and Smart Things. Data being the centre of innovative systems, its overall realization in solution building depends on several aspects such as the quality of data; data management; computation; knowledge discovery; decision support, etc.
+
                                 </p>
-                                <p> ICDDS’22 aims to look broadly at data based innovation and technologies in
-                                    interdisciplinary areas. The conference considers all aspects of application, data,
-                                    decision science, solution design and challenges in such new paradigm from theory to
-                                    applied research.</p>
+                                <p>ICDDS’22 aims to look broadly at data based innovation and technologies in interdisciplinary areas. The conference considers all aspects of data and decision science, applications, solution design and system challenges in all such new paradigms ranging from theory to applied research.</p>
                                 <!-- <a href="#">Read More</a> -->
                             </div>
 
@@ -346,21 +338,17 @@
                 <div class="col-md-12 content-cols content-cols-right">
                     <div class="content-col">
                         <p>
-                            ICDDS’22- a flagship conference of IEEE Computer Society Bangalore Chapter invites
-                            researchers, engineers, and subject matter experts from academia, industry and start-ups to
-                            present their latest innovations in Data Science and their applications. ICDDS mainly has
-                            three tracks- <strong> Foundational Research Track, Data Science and System Research, and
-                                Data Science and Applications Track. </strong>
-                            Authors are encouraged to submit their original work(s) in either of these tracks or can
-                            submit in all. Foundational Research Track aims to receive submissions from theory to novel
-                            findings and current practices in all aspects of data science, whereas Data Science and
-                            System Research Track is focused on research addressing data science and its use cases for
-                            systems and distributed platforms. Data Science and Applications Track invites submissions
-                            addressing the research gap from the real-world problems and significant value creations.
+                            ICDDS’22, a flagship conference of IEEE Computer Society Bangalore Chapter, invites researchers, engineers, and subject matter experts from academia, industry, and start-ups to present their latest innovations in Data/Decision Science and their applications. 
                         </p>
+                        <p>ICDDS has three tracks: <br>(i) Foundational Research; <br>(ii) Data/Decision Science and System Research; <br>(iii)  Data/Decision Science and Applications. <br>Authors are encouraged to submit their original work(s) in any of these tracks. </p>
+                        <p>Track-I (Foundational Research) aims to receive submissions from theory to novel findings and current practices in all aspects of Data/Decision science</p>
+                        <p>Track-II (Data/Decision Science and System Research) is focused on research addressing the system aspects data/decision science.</p>
+                        <p>Track-III (Data/Decision Science and Applications) aims to attract submissions related to real-world problems and their solution approach using data/decision science.</p>
+                        <center>
                         <a  href="Foundational-Research-Track.html">Foundational Research Track</a> <br>
-                        <a  href="Data-Science-and-System-Research.html">Data Science and System Research</a><br>
-                        <a  href="Data-Science-and-Applications-Track.html">Data Science and Applications Track</a>
+                        <a  href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a><br>
+                        <a  href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications Track</a>
+                        </center>
                     </div>
                 </div>
             </div>
