--- a/Data-Science-and-System-Research.html
+++ b/Data-Science-and-System-Research.html
@@ -139,8 +139,8 @@
                     <li><a href="#">For Authors</a>
           <ul class="nav-dropdown">
             <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
-            <li><a href="Data-Science-and-System-Research.html">Data Science and System Research</a></li>
-            <li><a href="Data-Science-and-Applications-Track.html">Data Science and Applications Track</a></li>
+            <li><a href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a></li>
+            <li><a href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications Track</a></li>
           </ul>
         </li>
 
@@ -163,15 +163,15 @@
                         <div class="row">
                             <div class="col-md-6">
                                  <h1 class="banner-header">
-                                 Data Science and System Research
+                                 Data/Decision Science and System Research
                                 </h1>
                             </div>
                             <div class="col-md-6">
                                  <p class="banner-nav">
-                                  <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
+                                  <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                                     <span class="banner-box">
                                         <a href="index.html">Home</a>
-                                        <a href="committe.html">Data Science and System Research</a>
+                                        <a href="committe.html">Data/Decision Science and System Research</a>
                                     </span>
                                 </p>
                             </div>
