--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Program Committee | ICDDS 2022</title>
+        <title>Program Committee | ICDDS </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -132,8 +132,8 @@
                     <li><a href="#">For Authors</a>
           <ul class="nav-dropdown">
             <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
-            <li><a href="Data-Science-and-System-Research.html">Data Science and System Research</a></li>
-            <li><a href="Data-Science-and-Applications-Track.html">Data Science and Applications Track</a></li>
+            <li><a href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a></li>
+            <li><a href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications Track</a></li>
           </ul>
         </li>
 
@@ -161,7 +161,7 @@
                             </div>
                             <div class="col-md-6">
                                  <p class="banner-nav">
-                                  <img src="img/IEEE-CS-BangaloreChapter-White-Logo.png" width="190px"><br>
+                                  <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                                     <span class="banner-box">
                                         <a href="index.html">Home</a>
                                         <a href="Program-Committee.html">Program Committee</a>
