--- a/Data-Science-and-Applications-Track.html
+++ b/Data-Science-and-Applications-Track.html
@@ -2,8 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>DATA SCIENCE AND APPLICATIONS TRACK | ICDDS 2022
-</title>
+        <title>DATA SCIENCE AND APPLICATIONS TRACK | ICDDS</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
