--- a/index.html
+++ b/index.html
@@ -344,6 +344,9 @@
                         <p>Track-I (Foundational Research) aims to receive submissions from theory to novel findings and current practices in all aspects of Data/Decision science</p>
                         <p>Track-II (Data/Decision Science and System Research) is focused on research addressing the system aspects data/decision science.</p>
                         <p>Track-III (Data/Decision Science and Applications) aims to attract submissions related to real-world problems and their solution approach using data/decision science.</p>
+                        <p>General change:<br>
+                    All accepted and presented papers will be published as conference proceeding and will be included in IEEE Computer Society Digital Library.
+                            </p>
                         <center>
                         <a  href="Foundational-Research-Track.html">Foundational Research Track</a> <br>
                         <a  href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a><br>
