--- a/Data-Science-and-Applications-Track.html
+++ b/Data-Science-and-Applications-Track.html
@@ -187,7 +187,7 @@
 <div class="col-md-8">
 
         <p class="para">
-        <strong>The Data science and applications Track </strong> invites submissions discussing the experiment design, innovative approaches, implementation and results for application of data and decision science across different real-world problem statements. Authors are encouraged to submit their works focused on technical aspects of data mining methods, applied artificial intelligence/machine learning algorithms, MLOps, DevOps in data science, knowledge inferencing, context learning, application based benchmarking of ML models, experience from end-to-end deployment.
+        <strong>The Data/Decision science and applications Track </strong> invites submissions discussing the experiment design, innovative approaches, implementation and results for application of data and decision science across different real-world problem statements. Authors are encouraged to submit their works focused on technical aspects of data mining methods, applied artificial intelligence/machine learning algorithms, MLOps, DevOps in data science, knowledge inferencing, context learning, application based benchmarking of ML models, experience from end-to-end deployment.
 Authors can submit papers <strong> maximum of 6 pages </strong> including references. All accepted and presented papers will be published as conference proceeding and will be included in IEEE Xplore Digital Library and other indexing.
 </p>
 <p class="para">The topics of interests include, but are not limited to:</p>
