--- a/Data-Science-and-Applications-Track.html
+++ b/Data-Science-and-Applications-Track.html
@@ -124,7 +124,14 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="index.html">Home</a></li>
-                    <!-- <li><a href="about.html">About</a></li> -->
+     
+                    <li><a href="#">Call for Papers</a>
+                      <ul class="nav-dropdown">
+                        <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
+                        <li><a href="Data-Science-and-System-Research.html">DDS and System Research</a></li>
+                        <li><a href="Data-Science-and-Applications-Track.html">DDS and Applications</a></li>
+                      </ul>
+                    </li>
                     <li><a href="#">Committee</a>
 
                     <ul class="nav-dropdown">
@@ -133,16 +140,6 @@
             
           </ul>
 </li>
-
-                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
-
-                    <li><a href="#">For Authors</a>
-          <ul class="nav-dropdown">
-            <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
-            <li><a href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a></li>
-            <li><a href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications Track</a></li>
-          </ul>
-        </li>
 
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
@@ -163,7 +160,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                  <h1 class="banner-header">
-                                  Data/Decision science and applications Track
+                                  DDS and applications
                                 </h1>
                             </div>
                             <div class="col-md-6">
@@ -171,7 +168,7 @@
                                   <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                                     <span class="banner-box">
                                         <a href="index.html">Home</a>
-                                        <a href="committe.html">Data/Decision science and applications Track</a>
+                                        <a href="committe.html">DDS and applications</a>
                                     </span>
                                 </p>
                             </div>
@@ -187,7 +184,7 @@
 <div class="col-md-8">
 
         <p class="para">
-        <strong>The Data/Decision science and applications Track </strong> invites submissions discussing the experiment design, innovative approaches, implementation and results for application of data and decision science across different real-world problem statements. Authors are encouraged to submit their works focused on technical aspects of data mining methods, applied artificial intelligence/machine learning algorithms, MLOps, DevOps in data science, knowledge inferencing, context learning, application based benchmarking of ML models, experience from end-to-end deployment.
+        <strong>The DDS and applications </strong> invites submissions discussing the experiment design, innovative approaches, implementation and results for application of data and decision science across different real-world problem statements. Authors are encouraged to submit their works focused on technical aspects of data mining methods, applied artificial intelligence/machine learning algorithms, MLOps, DevOps in data science, knowledge inferencing, context learning, application based benchmarking of ML models, experience from end-to-end deployment.
 Authors can submit papers <strong> maximum of 6 pages </strong> including references. All accepted and presented papers will be published as conference proceeding and will be included in IEEE Xplore Digital Library and other indexing.
 </p>
 <p class="para">The topics of interests include, but are not limited to:</p>
@@ -200,16 +197,17 @@ Authors can submit papers <strong> maximum of 6 pages </strong> including refere
 <p class="para">
 
 <strong>Important Dates : </strong><br>
-Conference dates: 2-3 December 2022 <br>
-Paper submission deadline: June 15, 2022 <br>
-Paper acceptance decision: August 15, 2022 <br>
-Venue: BMS College Of Engineering, Bangalore 
+<strong>Conference dates :</strong> 2-3 December 2022 <br>
+<strong>Submission deadline :</strong> June 15, 2022 <br>
+<strong>Paper acceptance decision :</strong> August 15, 2022 <br>
+<strong>Venue :</strong> BMS College Of Engineering, Bangalore 
 
         </p>
 
         </div> 
- <div class="col-md-2   ">
-     <h2>Academic Partners</h2>
+ <div class="col-md-2">
+   <br>
+     <h2 style="font-size: larger;">Academic Partners</h2>
 
     <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
     <img class="img-fluid" src="img/BITS PILANI GOA LOGO.jpg" />
