--- a/Foundational-Research-Track.html
+++ b/Foundational-Research-Track.html
@@ -124,25 +124,21 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="index.html">Home</a></li>
-                    <!-- <li><a href="about.html">About</a></li> -->
+                    
+                    <li><a href="#">Call for Papers</a>
+                      <ul class="nav-dropdown">
+                        <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
+                        <li><a href="Data-Science-and-System-Research.html">DDS and System Research</a></li>
+                        <li><a href="Data-Science-and-Applications-Track.html">DDS and Applications</a></li>
+                      </ul>
+                    </li>
+
                     <li><a href="#">Committee</a>
-
-                    <ul class="nav-dropdown">
-            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
-            <li><a href="Program-Committee.html">Program Committee</a></li>
-            
-          </ul>
-</li>
-
-                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
-
-                    <li><a href="#">For Authors</a>
-          <ul class="nav-dropdown">
-            <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
-            <li><a href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a></li>
-            <li><a href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications Track</a></li>
-          </ul>
-        </li>
+                      <ul class="nav-dropdown">
+                        <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
+                        <li><a href="Program-Committee.html">Program Committee</a></li>  
+                      </ul>
+                    </li>
 
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
@@ -163,7 +159,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                  <h1 class="banner-header">
-                                 Foundational Research Track
+                                 Foundational Research
                                 </h1>
                             </div>
                             <div class="col-md-6">
@@ -171,7 +167,7 @@
                                   <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                                     <span class="banner-box">
                                         <a href="index.html">Home</a>
-                                        <a href="committe.html">Foundational Research Track</a>
+                                        <a href="committe.html">Foundational Research</a>
                                     </span>
                                 </p>
                             </div>
@@ -219,14 +215,15 @@
 </p>
 <p class="para">
 <strong>Important Dates :</strong> <br>
-Conference dates: 2-3 December 2022 <br>
-Paper submission deadline: June 15, 2022 <br>
-Paper acceptance decision: August 15, 2022 <br>
-Venue: BMS College of Engineering, Bangalore <br>
+<strong>Conference dates :</strong> 2-3 December 2022 <br>
+<strong>Paper submission deadline :</strong> June 15, 2022 <br>
+<strong>Paper acceptance decision :</strong> August 15, 2022 <br>
+<strong>Venue :</strong> BMS College of Engineering, Bangalore <br>
         </p>
 </div> 
  <div class="col-md-2">
-     <h2>Academic Partners</h2>
+   <br>
+     <h2 style="font-size: larger;">Academic Partners</h2>
     <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
     <img class="img-fluid" src="img/BITS PILANI GOA LOGO.jpg" />
     <img class="img-fluid" src="img/BMS LOGO.jpg" />
