--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -117,7 +117,14 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="index.html">Home</a></li>
-                    <!-- <li><a href="about.html">About</a></li> -->
+
+                    <li><a href="#">Call for Papers</a>
+                      <ul class="nav-dropdown">
+                        <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
+                        <li><a href="Data-Science-and-System-Research.html">DDS and System Research</a></li>
+                        <li><a href="Data-Science-and-Applications-Track.html">DDS and Applications</a></li>
+                      </ul>
+                    </li>
                     <li><a href="#">Committee</a>
 
                     <ul class="nav-dropdown">
@@ -127,15 +134,6 @@
           </ul>
 </li>
 
-                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
-
-                    <li><a href="#">For Authors</a>
-          <ul class="nav-dropdown">
-            <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
-            <li><a href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a></li>
-            <li><a href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications Track</a></li>
-          </ul>
-        </li>
 
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
@@ -181,48 +179,46 @@
               <!-- Agenda Section Start -->
               <section id="agenda">
                   <div class="container">
-                      <header class="section-header">
-                          <h3>Program Commitee</h3>
-                      </header>
+                      
                       <div class="image-holder-program">
                           <div>
                               <!-- <img src="img/Abhyuday.jpg" width="250px" height="250px"> -->
-                              <p class="commitee-names-program">Sravan Danda, BITS Pilani Goa, India</p>
+                              <p class="commitee-names-program">&#8226; Sravan Danda, BITS Pilani Goa, India</p>
                               <!-- <p class="position">BITS Pilani Goa, India</p> -->
                           </div>
                           <div>
                               <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                              <p class="commitee-names-program">Seema Chopra, Boeing, India</p>
+                              <p class="commitee-names-program">&#8226; Seema Chopra, Boeing, India</p>
                               <!-- <p class="position">Boeing, India</p> -->
                           </div>
                           <div>
                             <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                            <p class="commitee-names-program">Manik Gupta, BITS Pilani Goa, India</p>
+                            <p class="commitee-names-program">&#8226; Manik Gupta, BITS Pilani Goa, India</p>
                             <!-- <p class="position">BITS Pilani Goa, India</p> -->
                         </div>
                         <div>
                           <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                          <p class="commitee-names-program">Surjay Ghosh, BITS Pilani Goa, India</p>
+                          <p class="commitee-names-program">&#8226; Surjay Ghosh, BITS Pilani Goa, India</p>
                           <!-- <p class="position">BITS Pilani Goa, India</p> -->
                       </div>
                       <div>
                         <!-- <img src="img/Abhyuday.jpg" width="250px" height="250px"> -->
-                        <p class="commitee-names-program">Venkatakrishnan Ramaswam, BITS Pilani Hyderabad, India</p>
+                        <p class="commitee-names-program">&#8226; Venkatakrishnan Ramaswam, BITS Pilani Hyderabad, India</p>
                         <!-- <p class="position">BITS Pilani Hyderabad, India</p> -->
                     </div>
                     <div>
                         <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                        <p class="commitee-names-program">Basabdatta Bhattacharya, BITS Pilani Goa, India</p>
+                        <p class="commitee-names-program">&#8226; Basabdatta Bhattacharya, BITS Pilani Goa, India</p>
                         <!-- <p class="position">BITS Pilani Goa, India</p> -->
                     </div>
                     <div>
                       <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                      <p class="commitee-names-program">Archana Mathur, NMIT, India</p>
+                      <p class="commitee-names-program">&#8226; Archana Mathur, NMIT, India</p>
                       <!-- <p class="position">NMIT, India</p> -->
                   </div>
                   <div>
                     <!-- <img src="img/Bimal.jpg" width="250px" height="250px"> -->
-                    <p class="commitee-names-program">Aditya Challa, BITS Pilani Goa, India</p>
+                    <p class="commitee-names-program">&#8226; Aditya Challa, BITS Pilani Goa, India</p>
                     <!-- <p class="position">BITS Pilani Goa, India</p> -->
                 </div>
                       </div>
@@ -231,6 +227,7 @@
               </section>
           </div>
           <div class="col-md-3">
+            <br>
               <h3>Academic Partners</h3>
               <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="partner-logos" />
               <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px" alt="partner-logos" />
