--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,16 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="index.html">Home</a></li>
-                    <!-- <li><a href="about.html">About</a></li> -->
+
+                    <li><a href="#">Call for Papers</a>
+                        <ul class="nav-dropdown">
+                            <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
+                            <li><a href="Data-Science-and-System-Research.html">DDS and System Research</a>
+                            </li>
+                            <li><a href="Data-Science-and-Applications-Track.html">DDS and Applications</a></li>
+                        </ul>
+                    </li>
+
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
@@ -130,17 +139,6 @@
                         </ul>
                     </li>
 
-                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
-
-                    <li><a href="#">For Authors</a>
-                        <ul class="nav-dropdown">
-                            <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
-                            <li><a href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a>
-                            </li>
-                            <li><a href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications
-                                    Track</a></li>
-                        </ul>
-                    </li>
 
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
@@ -184,7 +182,7 @@
     <section id="contact">
         <div class="container">
             <div class="section-header">
-                <h3>Contact Us</h3>
+                <h3>Contact</h3>
             </div>
             <div class="row">
 
@@ -210,9 +208,10 @@
                         <div><button type="submit">Send Message</button></div>
                     </form>
                 </div>
-
+                
                 <div class="col-md-2">
-                    <h2>Academic Partners</h2>
+                    <br>
+                    <h2 style="font-size: large;">Academic Partners</h2>
                     <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
                     <img class="img-fluid" src="img/BITS PILANI GOA LOGO.jpg" />
                     <img class="img-fluid" src="img/BMS LOGO.jpg" />
