--- a/venue.html
+++ b/venue.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Venue | ICDDS</title>
+        <title>Conference Venue | ICDDS</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -117,7 +117,15 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="index.html">Home</a></li>
-                    <!-- <li><a href="about.html">About</a></li> -->
+
+                    <li><a href="#">Call for Papers</a>
+                      <ul class="nav-dropdown">
+                        <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
+                        <li><a href="Data-Science-and-System-Research.html">DDS and System Research</a></li>
+                        <li><a href="Data-Science-and-Applications-Track.html">DDS and Applications</a></li>
+                      </ul>
+                    </li>
+
                     <li><a href="#">Committee</a>
 
                     <ul class="nav-dropdown">
@@ -127,15 +135,6 @@
           </ul>
 </li>
 
-                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
-
-                    <li><a href="#">For Authors</a>
-          <ul class="nav-dropdown">
-            <li><a href="Foundational-Research-Track.html">Foundational Research Track</a></li>
-            <li><a href="Data-Science-and-System-Research.html">Data/Decision Science and System Research</a></li>
-            <li><a href="Data-Science-and-Applications-Track.html">Data/Decision Science and Applications Track</a></li>
-          </ul>
-        </li>
 
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
@@ -156,7 +155,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                  <h1 class="banner-header">
-                                    Venue
+                                    Conference Venue
                                 </h1>
                             </div>
                             <div class="col-md-6">
@@ -164,7 +163,7 @@
                                   <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                                     <span class="banner-box">
                                         <a href="index.html">Home</a>
-                                        <a href="venue.html">Venue</a>
+                                        <a href="venue.html">Conference Venue</a>
                                     </span>
                                 </p>
                             </div>
@@ -202,7 +201,8 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.4599577246213!2d77.56522136482171!3d12.942393090874972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae158b11e34d2f%3A0x5f4adbdbab8bd80f!2sBMS%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1647757828442!5m2!1sen!2sin" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="col-md-2">
-        <h2>Academic Partners</h2>
+          <br>
+        <h2 style="font-size: larger;">Academic Partners</h2>
                         
                         <img class="" src="img/APPCAIR LOGO.jpg"  width="170px;" height="150px";/>
                         <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px";/>
