--- a/Data-Science-and-System-Research.html
+++ b/Data-Science-and-System-Research.html
@@ -209,11 +209,12 @@
 </p>
 <p class="para">
 
-<strong>Important Dates :</strong><br>
-<strong>Conference dates :</strong> 2-3 December 2022 <br>
-<strong>Paper submission deadline :</strong> June 15, 2022 <br>
-<strong>Paper acceptance decision :</strong> August 15, 2022 <br>
-<strong>Venue :</strong> BMS College of Engineering, Bangalore <br>
+  <strong>Important Dates : </strong><br>
+  <strong>Abstract Submission :</strong> August 19, 2022 <br>
+  <strong>Full Paper Submission :</strong>August 26, 2022 <br>
+  <strong>Notification of Acceptance :</strong> October 14, 2022 <br>
+  <strong>Final Paper Submission :</strong> October 28, 2022 <br>
+  <strong>Venue :</strong> BMS College Of Engineering, Bangalore 
 
         </p>
         </div> 
