--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -124,9 +124,9 @@
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
                             <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
-                            <li><a href="Data-Science-and-System-Research.html">DDS and System Research</a>
+                            <li><a href="Data-Science-and-System-Research.html">System Research</a>
                             </li>
-                            <li><a href="Data-Science-and-Applications-Track.html">DDS and Applications</a></li>
+                            <li><a href="Data-Science-and-Applications-Track.html">Applications</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Committee</a>
