--- a/venue.html
+++ b/venue.html
@@ -121,8 +121,8 @@
                     <li><a href="#">Call for Papers</a>
                       <ul class="nav-dropdown">
                         <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
-                        <li><a href="Data-Science-and-System-Research.html">DDS and System Research</a></li>
-                        <li><a href="Data-Science-and-Applications-Track.html">DDS and Applications</a></li>
+                        <li><a href="Data-Science-and-System-Research.html">System Research</a></li>
+                        <li><a href="Data-Science-and-Applications-Track.html">Applications</a></li>
                       </ul>
                     </li>
 
@@ -185,7 +185,7 @@
                     </div>
                     <div class="col-md-6 des-cols">
                         <div class="des-col">
-                            <h2>Conference Venue</h2>
+                            <h2 >Conference Venue</h2>
                             <h3>B.M.S. College of Engineering</h3>
                             <h4> Bull Temple Rd, Basavanagudi, Bengaluru, Karnataka 560019</h4>
                             <p>
