--- a/index.html
+++ b/index.html
@@ -246,16 +246,16 @@
                                                     from academia, industry, and start-ups to present their latest
                                                     innovations in Data/Decision Science (DDS) and their applications.
                                                 </p>
-                                                <p>ICDDS has three tracks : <br>(i) Foundational Research <br>(ii) DDS
-                                                    and System Research <br>(iii) DDS and Applications. <br>Authors are
+                                                <p>ICDDS has three tracks : <br>(i) Foundational Research <br>(ii)
+                                                    System Research <br>(iii) Applications. <br>Authors are
                                                     encouraged to submit their original work(s) in any of these tracks.
                                                 </p>
-                                                <p>Track-I (Foundational Research) aims to receive submissions from
+                                                <p>Track-I Foundational Research aims to receive submissions from
                                                     theory to novel findings and current practices in all aspects of
                                                     Data/Decision science</p>
-                                                <p>Track-II (DDS and System Research) is focused on research addressing
+                                                <p>Track-II System Research is focused on research addressing
                                                     the system aspects data/decision science.</p>
-                                                <p>Track-III (DDS and Applications) aims to attract submissions related
+                                                <p>Track-III Applications aims to attract submissions related
                                                     to real-world problems and their solution approach using
                                                     data/decision science.</p>
                                                 <p>
@@ -266,9 +266,10 @@
                                                 <center>
                                                     <a href="Foundational-Research-Track.html">Foundational Research</a>
                                                     <br>
-                                                    <a href="Data-Science-and-System-Research.html">System Research</a><br>
+                                                    <a href="Data-Science-and-System-Research.html">System
+                                                        Research</a><br>
                                                     <a href="Data-Science-and-Applications-Track.html">Applications </a>
-                                                    </center>
+                                                </center>
                                             </div>
                                         </div>
                                     </div>
