--- a/Data-Science-and-System-Research.html
+++ b/Data-Science-and-System-Research.html
@@ -128,7 +128,7 @@
                     <li><a href="#">Call for Papers</a>
                       <ul class="nav-dropdown">
                         <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
-                        <li><a href="Data-Science-and-System-Research.html">System Research</a></li>
+                        <li><a href="Data-Science-and-System-Research.html">Systems Research</a></li>
                         <li><a href="Data-Science-and-Applications-Track.html">Applications</a></li>
                       </ul>
                     </li>
