--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
                             <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
-                            <li><a href="Data-Science-and-System-Research.html">System Research</a>
+                            <li><a href="Data-Science-and-System-Research.html">Systems Research</a>
                             </li>
                             <li><a href="Data-Science-and-Applications-Track.html">Applications</a></li>
                         </ul>
@@ -246,16 +246,15 @@
                                                     from academia, industry, and start-ups to present their latest
                                                     innovations in Data/Decision Science (DDS) and their applications.
                                                 </p>
-                                                <p>ICDDS has three tracks : <br>(i) Foundational Research <br>(ii) DDS
-                                                    and System Research <br>(iii) DDS and Applications. <br>Authors are
+                                                <p>ICDDS has three tracks : <br>(i) Foundational Research <br>(ii) Systems Research <br>(iii) Applications. <br>Authors are
                                                     encouraged to submit their original work(s) in any of these tracks.
                                                 </p>
                                                 <p>Track-I (Foundational Research) aims to receive submissions from
                                                     theory to novel findings and current practices in all aspects of
                                                     Data/Decision science</p>
-                                                <p>Track-II (DDS and System Research) is focused on research addressing
+                                                <p>Track-II (Systems Research) is focused on research addressing
                                                     the system aspects data/decision science.</p>
-                                                <p>Track-III (DDS and Applications) aims to attract submissions related
+                                                <p>Track-III (Applications) aims to attract submissions related
                                                     to real-world problems and their solution approach using
                                                     data/decision science.</p>
                                                 <p>
@@ -266,7 +265,7 @@
                                                 <center>
                                                     <a href="Foundational-Research-Track.html">Foundational Research</a>
                                                     <br>
-                                                    <a href="Data-Science-and-System-Research.html">System Research</a><br>
+                                                    <a href="Data-Science-and-System-Research.html">Systems Research</a><br>
                                                     <a href="Data-Science-and-Applications-Track.html">Applications </a>
                                                     </center>
                                             </div>
