--- a/Applications.html
+++ b/Applications.html
@@ -127,9 +127,9 @@
      
                     <li><a href="#">Call for Papers</a>
                       <ul class="nav-dropdown">
-                        <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
-                        <li><a href="Data-Science-and-System-Research.html">Systems Research</a></li>
-                        <li><a href="Data-Science-and-Applications-Track.html">Applications</a></li>
+                        <li><a href="Foundational-Research.html">Foundational Research</a></li>
+                        <li><a href="Systems-Research.html">Systems Research</a></li>
+                        <li><a href="Applications.html">Applications</a></li>
                       </ul>
 
                     </li>
