--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                     <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
-                            <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
-                            <li><a href="Data-Science-and-System-Research.html">Systems Research</a>
+                            <li><a href="Foundational-Research.html">Foundational Research</a></li>
+                            <li><a href="Systems-Research.html">Systems Research</a>
                             </li>
-                            <li><a href="Data-Science-and-Applications-Track.html">Applications</a></li>
+                            <li><a href="Applications.html">Applications</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Committee</a>
@@ -263,10 +263,10 @@
                                                     Library.
                                                 </p>
                                                 <center>
-                                                    <a href="Foundational-Research-Track.html">Foundational Research</a>
+                                                    <a href="Foundational-Research.html">Foundational Research</a>
                                                     <br>
-                                                    <a href="Data-Science-and-System-Research.html">Systems Research</a><br>
-                                                    <a href="Data-Science-and-Applications-Track.html">Applications </a>
+                                                    <a href="Systems-Research.html">Systems Research</a><br>
+                                                    <a href="Applications.html">Applications </a>
                                                 </center>
                                             </div>
                                         </div>
