--- a/contact.html
+++ b/contact.html
@@ -123,10 +123,10 @@
 
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
-                            <li><a href="Foundational-Research-Track.html">Foundational Research</a></li>
-                            <li><a href="Data-Science-and-System-Research.html">Systems Research</a>
+                            <li><a href="Foundational-Research.html">Foundational Research</a></li>
+                            <li><a href="Systems-Research.html">Systems Research</a>
                             </li>
-                            <li><a href="Data-Science-and-Applications-Track.html">Applications</a></li>
+                            <li><a href="Applications.html">Applications</a></li>
                         </ul>
                     </li>
 
