--- a/Applications.html
+++ b/Applications.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>DATA SCIENCE AND APPLICATIONS TRACK | ICDDS</title>
+        <title>APPLICATIONS | ICDDS</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -66,53 +66,7 @@
   </script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-  .dropdown {
-  float: left;
-  overflow: hidden;
-}
 
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-  </style>
 <!-- Header Start -->
  <header id="header">
         <div class="container-fluid">
@@ -226,13 +180,13 @@ Authors can submit papers <strong> maximum of 6 pages </strong> including refere
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="social-links">
-                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                        <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a>
-                        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                    </div>
+                  <div class="social-links">
+                    <a href="https://twitter.com/ieeecsbs" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <!-- <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a> -->
+                    <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
                 </div>
 
             </div>
