--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -61,54 +61,7 @@
     </script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .dropdown {
-            float: left;
-            overflow: hidden;
-        }
 
-        .dropdown .dropbtn {
-            font-size: 16px;
-            border: none;
-            outline: none;
-            color: white;
-            padding: 14px 16px;
-            background-color: inherit;
-            font-family: inherit;
-            margin: 0;
-        }
-
-        .navbar a:hover,
-        .dropdown:hover .dropbtn {
-            background-color: red;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-
-        .dropdown-content a {
-            float: none;
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-    </style>
     <!-- Header Start -->
     <header id="header">
         <div class="container-fluid">
@@ -345,32 +298,7 @@
                     </div>
                 </div>
             </section>
-            <!-- 
-            <section id="agenda">
-                <div class="container">
-                    <header class="section-header">
-                        <h3>Sponsorship Chairs</h3>
-                    </header>
-                    <div class="image-holder">
-                        <div>
-                            <img src="img/Abhyuday.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Narayanan Subramaniam</p>
-                            <p class="position">Nutanix</p>
-                        </div>
-                        <div>
-                            <img src="img/Bimal.jpg" width="250px" height="250px">
-                            <p class="commitee-names"> Santosh Kumar</p>
-                            <p class="position">Ws Adkins</p>
-                        </div>
-                        <div>
-                            <img src="img/Bimal.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Prashant Mantri</p>
-                            <p class="position">Tessolve</p>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
-            <!-- Agenda Section End -->
+            
         </div>
         <div class="col-md-3">
             <br>
@@ -391,11 +319,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="social-links">
-                            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a>
-                            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://twitter.com/ieeecsbs" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+                            <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <!-- <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a> -->
+                            <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
                         </div>
                     </div>
 
