--- a/index.html
+++ b/index.html
@@ -62,54 +62,7 @@
     </script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .dropdown {
-            float: left;
-            overflow: hidden;
-        }
 
-        .dropdown .dropbtn {
-            font-size: 16px;
-            border: none;
-            outline: none;
-            color: white;
-            padding: 14px 16px;
-            background-color: inherit;
-            font-family: inherit;
-            margin: 0;
-        }
-
-        .navbar a:hover,
-        .dropdown:hover .dropbtn {
-            background-color: red;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-
-        .dropdown-content a {
-            float: none;
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-    </style>
     <!-- Header Start -->
     <header id="header">
         <div class="container-fluid">
@@ -190,25 +143,8 @@
     <!-- About Section Start-->
     <section id="about">
         <div class="container">
-            <!-- <header class="section-header">
-                <h3>About</h3>
-            </header> -->
+
             <div class="row">
-                <!-- <div class="col-md-12 about-col-1">
-                    <div class="about-title">
-                        <h1>International Conference on Data, Decision and Systems</h1> -->
-                <!-- <a href="#">Buy Tickets</a> -->
-                <!-- </div>
-                </div>
-                <div class="col-md-6 about-col-2"> -->
-                <!-- <div class="about-imgs">
-                            <div class="about-img">
-                           <img class="img-fluid" src="https://via.placeholder.com/1000x600" /> 
-                            </div>
-                        </div> -->
-                <!-- </div> -->
-
-
 
                 <div class="col-md-12 about-des">
                     <div class="row">
@@ -282,12 +218,12 @@
                         <div class="col-md-2">
                             <h2 style="font-size: large;">Academic Partners</h2>
 
-                            <img class="img-fluid" src="img/APPCAIR LOGO.jpg" />
-                            <img class="img-fluid" src="img/BITS PILANI GOA LOGO.jpg" />
-                            <img class="img-fluid" src="img/BMS LOGO.jpg" />
-                            <img class="img-fluid" src="img/RV LOGO.jpg" />
-                            <img class="img-fluid" src="img/VVCE LOGO.jpg" />
-                            <img class="img-fluid" src="img/MIT LOGO.jpg" />
+                            <img class="partners" src="img/APPCAIR LOGO.jpg" />
+                            <img class="partners" src="img/BITS PILANI GOA LOGO.jpg" />
+                            <img class="partners" src="img/BMS LOGO.jpg" />
+                            <img class="partners" src="img/RV LOGO.jpg" />
+                            <img class="partners" src="img/VVCE LOGO.jpg" />
+                            <img class="partners" src="img/MIT LOGO.jpg" />
 
                         </div>
 
@@ -306,7 +242,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="img-col">
-                        <img class="img-fluid" src="img/BMS COLLEGE OF ENGINEERING 1.jpg">
+                        <img class="img-fluid-venue" src="img/BMS COLLEGE OF ENGINEERING 1.jpg">
                     </div>
                 </div>
                 <div class="col-md-6 des-cols">
@@ -373,11 +309,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="social-links">
-                            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a>
-                            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://twitter.com/ieeecsbs" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+                            <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <!-- <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a> -->
+                            <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
                         </div>
                     </div>
 
@@ -396,7 +332,7 @@
     <!-- Footer Ends-->
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-    <!-- Uncomment below i you want to use a preloader -->
+    <!-- Uncomment below if you want to use a preloader -->
     <!-- <div id="preloader"></div> -->
 
     <!-- JavaScript Libraries -->
